--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "youch-terminal": "^1.1.1"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.0.9",
     "@adonisjs/core": "^5.3.4",
+    "@adonisjs/lucid": "^16.1.0",
     "@adonisjs/repl": "^3.1.6",
     "@adonisjs/session": "^6.1.2",
     "@adonisjs/shield": "^7.0.6",
     "@adonisjs/view": "^6.1.1",
+    "@phc/pbkdf2": "^1.1.14",
+    "luxon": "^2.0.2",
+    "mysql": "^2.18.1",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.20"
